# TryingCoffee

./: ApplicationFlowModel.cpp  ApplicationFlowModel.h  CMakeLists.txt  ChoosingCoffee.qml  CoffeeButton.qml  CoffeeDelegate.qml  CoffeeModel.cpp  CoffeeModel.h  CupForm.qml  SideBar.qml  main.cpp  main.qml  qtinsight.conf
imports/Coffee/: Constants.qml
